# dfcontext

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md  budget_tuning.py  compare_dataframes.py  mcp_server.py  with_claude.py  with_openai.py
src/dfcontext/: __init__.py  budget.py  config.py  core.py  correlations.py  hints.py  sampler.py  tokenizer.py
src/dfcontext/analyzers/: __init__.py  base.py  boolean.py  categorical.py  datetime.py  numeric.py  text.py
src/dfcontext/formatters/: __init__.py  base.py  markdown.py  plain.py  yaml_fmt.py
tests/: test_budget.py  test_compare.py  test_config.py  test_core.py  test_correlations.py  test_hints.py  test_sampler.py  test_tokenizer.py  test_version.py
tests/test_analyzers/: test_boolean.py  test_categorical.py  test_classify.py  test_datetime.py  test_numeric.py  test_text.py
tests/test_formatters/: test_markdown.py  test_plain.py  test_yaml.py
